# aur-watcher

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.toml
src/: aur.rs  config.rs  gotify.rs  main.rs  version.rs
